Updated elements in financials_report and fixed blank row spacing issue with javascript.

--- a/Pricing/static/Pricing/styles.css
+++ b/Pricing/static/Pricing/styles.css
@@ -16,16 +16,19 @@
   background-color: #f2f2f2; /* This is usually light grey */
 }
 .my-financial-table {
-  width: 100%;  /* Ensures your table takes up the full container width */
+  width: 100%; /* Ensures your table takes up the full container width */
   table-layout: fixed;  /* This makes sure that the column widths are set by the table, and not by the individual cell content */
 }
 
 .my-financial-table th, .my-financial-table td {
-  width: 25%;  /* Forces each column to take up 25% of the table width */
+  width: 25%; /* Forces each column to take up 25% of the table width */
   text-align: right;  /* Keeps your content aligned to the right */
   overflow: hidden;  /* Ensures that content too long for the cell doesn’t spill out */
 }
 
+.my-financial-table th:empty::after, my-financial-table td {
+   content:" ";
+}
 
 
 
